Add Order model with basic scaffold

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,6 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
+@import "scaffolds";
 
 // Styles for invalid inputs lifted from Bootstrap 2.3.2.
 input:focus:invalid,
