Add basic Elm app
This commit contains all the things which are needed to display
a simple "Hello, World!" in Elm in a Rails app.

The infrastructure for compiling the code is missing,
but it's not the point of focus as of now. The compilation step is going
to be solved later by using either elm-webpack-loader [1] or a Makefile.

[1] https://github.com/rtfeldman/elm-webpack-loader

--- a/app/views/orders/_form.html.haml
+++ b/app/views/orders/_form.html.haml
@@ -1,3 +1,5 @@
+#order_form
+
 = form_for(order) do |f|
   - if order.errors.any?
     #error_explanation
@@ -51,3 +53,5 @@
         = f.email_field :customer_email, class: 'form-control'
   .actions
     = f.submit class: 'btn btn-default'
+
+= javascript_include_tag 'order_form'
